--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "advent-of-code",
-  "version": "1.0.0",
-  "description": "Solutions for Advent of Code",
-  "private": true,
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "puzzle": "tsx index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.10.2",
-    "@types/ramda": "^0.29.9",
-    "prettier": "^3.1.0",
-    "ramda": "^0.29.1",
-    "ramda-adjunct": "^4.1.1",
-    "tsx": "^4.6.1",
-    "typescript": "^5.3.2"
-  },
-  "volta": {
-    "node": "20.10.0"
-  }
+	"name": "advent-of-code",
+	"version": "1.0.0",
+	"description": "Solutions for Advent of Code",
+	"private": true,
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"format": "prettier .",
+		"format:fix": "pnpm run format --write",
+		"lint": "eslint .",
+		"lint:fix": "pnpm run lint --fix",
+		"puzzle": "tsx index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^20.10.2",
+		"@types/ramda": "^0.29.9",
+		"@typescript-eslint/eslint-plugin": "^6.13.1",
+		"@typescript-eslint/parser": "^6.13.1",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.1.0",
+		"ramda": "^0.29.1",
+		"ramda-adjunct": "^4.1.1",
+		"tsx": "^4.6.1",
+		"typescript": "^5.3.2"
+	},
+	"volta": {
+		"node": "20.10.0"
+	}
 }
